# ResumeAgent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TASK11_COMPLETION_REPORT.md  USAGE_GUIDE.md  debug_page.html  debug_scraper.py  demo.html  demo_app.py  demo_navigation.sh  demo_tui.py  generate_test_pdf.py  interface_demo.py  pyproject.toml  requirements.txt  run_web.py  scraper_test_report.md  streamlit_app.py  test_agent_page.py  test_app_integration.py  test_command_mode.py  test_scraper.py  test_security.py  test_task10_features.py  test_tui_basic.py  test_web_agent_manager.py  test_web_security.py  verify_task11.py
.claude/specs/resume-assistant/: design.md  requirements.md  tasks.md
.streamlit/: config.toml
data/jobs/: 2b62bee0-3659-47a0-b175-efa18e0eaa44.json  594e9122-8f0e-499f-87c9-0f92d1d4e2d8.json  5c384a14-4174-4c51-b5b9-87ef63454441.json  7188e288-d05a-4c83-9e85-a40c7b4a07a5.json  d61f81f2-59b8-4698-a477-3dc8057db1bf.json  jobs_metadata.json
data/resumes/: resumes_metadata.json  test_resume_2.md  test_resume_3.md
docs/: enhanced_scraper_guide.md
src/resume_assistant/: __init__.py  main.py
tests/: test_ai_agent_data_layer.py  test_enhanced_scraper.py
tests/integration/: test_agent_workflow.py  test_api_service_integration.py  test_end_to_end_workflow.py  test_job_scraping_simple.py  test_job_scraping_workflow.py
tests/ui/: test_streamlit_pages.py  test_ui_interactions.py
tests/unit/: test_agents.py  test_ai_analyzer.py  test_database.py  test_resume_processor.py  test_scraper.py  test_ui_components.py  test_web_components.py
(+40 files in other folders)
