[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "resume-assistant"
version = "0.1.0"
description = "AI-powered resume optimization tool"
authors = ["ResumeAgent Team <contact@resumeagent.dev>"]
readme = "README.md"
packages = [{include = "resume_assistant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.24.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
PyMuPDF = "^1.23.0"
markdown = "^3.5.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
loguru = "^0.7.0"
tenacity = "^8.2.0"
cryptography = "^41.0.0"
aiosqlite = "^0.19.0"
playwright = "^1.54.0"
rich = "^13.0.0"
streamlit = "^1.28.0"
plotly = "^5.17.0"
streamlit-aggrid = "^0.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"
coverage = "^7.3.0"

[tool.poetry.scripts]
resume-assistant = "resume_assistant.main:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"